# MoonSpec

./: AGENTS.md  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml
.github/workflows/: test.yml
artifacts/: jira-implement-assessment.json  jira-implement-brief.json
artifacts.readonly-context/context/: rag-context-38679ae6fe96.json
artifacts/context/: rag-context-a4ce5015444a.json
bundle/: moonspec.bundle.yaml
bundle/docs/: AuthoringGuide.md  BundleIntegration.md  MoonSpecAcceptanceAssessment.md  MoonSpecDocumentModel.md
bundle/presets/: moonspec-orchestrate.yaml
bundle/projections/: moonmind.yaml
bundle/scripts/bash/: common.sh  (+3 more)
bundle/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
docs/: installation.md
src/moonspec_cli/: __init__.py  project.py  validation.py
src/specify_cli/: __init__.py  extensions.py
templates/: checklist-template.md  constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
templates/commands/: align.md  analyze.md  breakdown.md  clarify.md  implement.md  orchestrate.md  plan.md  specify.md  tasks.md  taskstoissues.md  verify.md
tests/: conftest.py  test_bundle_manifest.py  test_cli.py  test_common_script.py  test_projection_moonmind.py  test_scripts_exist.py  test_terminology.py  test_verify_source_direct.py
tests/integrations/: test_integration_base_markdown.py  test_integration_base_skills.py  test_integration_base_toml.py  test_integration_copilot.py  test_integration_generic.py
tools/: check_terminology.py  project_bundle.py  validate_bundle.py
(+56 files in other folders)
