[project]
name = "moonspec-cli"
version = "0.1.0"
description = "MoonSpec workflow bundle validation and projection tools."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
moonspec = "moonspec_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moonspec_cli"]

[tool.hatch.build.targets.wheel.force-include]
"bundle" = "moonspec_cli/bundle"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-q",
    "--tb=short",
]
